github page test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://deesepulveda.github.io/beastleague_app",
+  "home": "https://deesepulveda.github.io/beastleague_app/",
   "name": "beastleague_app",
   "version": "0.1.0",
   "private": true,
