--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://deesepulveda.github.io/beastleague_app",
   "name": "beastleague_app",
   "version": "0.1.0",
   "private": true,
